--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="bg">#0a0a0f</color>
-    <color name="panel">#12121a</color>
-    <color name="accent">#00d4aa</color>
-    <color name="secondary">#ff6b35</color>
-    <color name="danger">#ff3366</color>
-    <color name="text">#ffffff</color>
-    <color name="text_dim">#6a6a7a</color>
-    <color name="border">#2a2a3a</color>
-    <color name="ic_launcher_background">#00d4aa</color>
+    <color name="bg">#1a1a1a</color>
+    <color name="surface">#242424</color>
+    <color name="surface2">#2e2e2e</color>
+    <color name="border">#383838</color>
+    <color name="border_hi">#505050</color>
+    <color name="amber">#f59e0b</color>
+    <color name="amber_dim">#7a4f05</color>
+    <color name="amber_glow">#fbbf24</color>
+    <color name="green">#22c55e</color>
+    <color name="red">#ef4444</color>
+    <color name="text">#e5e5e5</color>
+    <color name="text_dim">#737373</color>
+    <color name="text_faint">#404040</color>
+    <color name="ic_launcher_background">#f59e0b</color>
 </resources>
